--- a/.github/workflows/test-install.yml
+++ b/.github/workflows/test-install.yml
@@ -18,6 +18,7 @@ on:
       - 'api/**'
       - 'admin/**'
       - 'ansible/**'
+      - 'workflows/test-install.yml'
 
 jobs:
   test-installation:
