--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -95,9 +95,9 @@
   ansible.builtin.lineinfile:
     path: /etc/apt/sources.list.d/docker.list
     create: yes
-    line: "deb [arch={{ architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian {{ docker_codename }} stable"
-    state: present
+    line: "deb [arch={{ architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian {{ docker_codename | trim }} stable"
     insertafter: EOF
+    state: present
 
 # Update apt cache
 - name: Update apt cache
