--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -163,6 +163,14 @@
   tags:
     - system-upgrade
 
+- name: Ensure pip and setuptools are available
+  ansible.builtin.apt:
+    name:
+      - python3-pip
+      - python3-setuptools
+    state: present
+
+
 - name: Clean up unused packages
   ansible.builtin.apt:
     autoremove: true
