refactor: replace chromium-browser with chromium for headless mode installation

--- a/ansible/roles/kiosk/tasks/main.yml
+++ b/ansible/roles/kiosk/tasks/main.yml
@@ -43,7 +43,7 @@
       - xinit
       - openbox
       - unclutter
-      - chromium-browser
+      - chromium
     state: present
     update_cache: yes
   when: not desktop_mode
