fix: resolve container recreation loop by normalizing state comparisons
- Updated ContainerManager to ensure current state uses empty arrays/objects instead of undefined for ports, networks, and environment variables.
- Normalized container status to lowercase for consistency.
- Enhanced logging in stepsToUpdateApp() to provide detailed comparison information when services need updates.
- Extracted actual environment variables from Docker inspect to accurately reflect running configurations.
- Added a new PowerShell script to facilitate local agent execution on Windows.
- Updated mock API endpoints in Postman collection and Docker Compose template for testing.
- Documented the container recreation issue and its resolution in a new markdown file.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,21 +2,26 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Application Manager",
+      "name": "Debug Agent",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run", "dev"],
-      "cwd": "${workspaceFolder}/application-manager",
+      "cwd": "${workspaceFolder}/agent",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**"],
       "restart": true,
       "sourceMaps": true,
+      
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "!**/node_modules/**"
-      ]
+      ],
+      "env": {
+        "USE_REAL_DOCKER": "true",
+        "CLOUD_API_ENDPOINT": "https://081c79d3-cd3b-4dc0-9703-9ca2c578467c.mock.pstmn.io"
+      }
     },
     {
       "name": "Debug Application Manager (Server Only)",
