feat: Implement database write optimization to reduce unnecessary writes
- Added Jest setup file for testing environment.
- Configured TypeScript for test files with appropriate compiler options.
- Documented the database state management process, ensuring only 2 records are maintained in the stateSnapshot table.
- Completed implementation of database write optimization, including state comparison to avoid redundant writes.
- Updated auto-reconciliation logic to skip database writes unless state changes.
- Added migration to clean up old state snapshots, ensuring only the latest records are retained.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,8 +20,9 @@
       ],
       "env": {
         "USE_REAL_DOCKER": "true",
-        "CLOUD_API_ENDPOINT": "https://c62928c9-34b3-42c3-9eb2-e97f2b5c3fd9.mock.pstmn.io",
-        "LOG_COMPRESSION": "false"
+        "CLOUD_API_ENDPOINT": "https://5eeb2cea-372f-44bf-b399-14bfd8d191ca.mock.pstmn.io",
+        "LOG_COMPRESSION": "false",
+        "PROVISIONING_API_KEY": "your_provisioning_api_key_64_chars_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
       }
     },
     {
